# src/swagger.json
@@ -680,204 +680,6 @@
         }
       }
     },
-    "/subscriptions/c/{channelId}": {
-      "get": {
-        "summary": "Get channels subscribed by a user",
-        "tags": ["Subscription"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "channelId",
-            "type": "string",
-            "required": true,
-            "description": "ID of the user to get subscribed channels for"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Subscribed channels list retrieved successfully",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "statusCode": {
-                  "type": "integer",
-                  "example": 200
-                },
-                "data": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "subscriber": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                },
-                "message": {
-                  "type": "string",
-                  "example": "list of channel i subscribed found"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Channel ID does not exist"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "post": {
-        "summary": "Toggle subscription to a channel",
-        "tags": ["Subscription"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "channelId",
-            "type": "string",
-            "required": true,
-            "description": "ID of the channel to subscribe/unsubscribe"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Subscription toggled successfully",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "statusCode": {
-                  "type": "integer",
-                  "example": 200
-                },
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "subscriber": {
-                      "type": "string"
-                    },
-                    "channel": {
-                      "type": "string"
-                    }
-                  }
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Successfully subscribed to the channel"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Channel not found or operation failed"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/subscriptions/u/{subscriberId}": {
-      "get": {
-        "summary": "Get subscribers list of a channel",
-        "tags": ["Subscription"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "subscriberId",
-            "type": "string",
-            "required": true,
-            "description": "ID of the channel to get subscribers for"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Subscribers list retrieved successfully",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "statusCode": {
-                  "type": "integer",
-                  "example": 200
-                },
-                "data": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "channel": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                },
-                "message": {
-                  "type": "string",
-                  "example": "list of subscriber found"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Subscriber ID does not exist"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/subscriptions/c/{channelId}/subscribed-channels": {
-      "get": {
-        "summary": "Get channels subscribed by a user",
-        "tags": ["Subscription"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "channelId",
-            "type": "string",
-            "required": true,
-            "description": "ID of the user to get subscribed channels for"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Subscribed channels list retrieved successfully",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "statusCode": {
-                  "type": "integer",
-                  "example": 200
-                },
-                "data": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "subscriber": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                },
-                "message": {
-                  "type": "string",
-                  "example": "list of channel i subscribed found"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Channel ID does not exist"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/playlist": {
       "post": {
         "summary": "Create a new playlist",
